// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Title Component Title renders 1`] = `
<div>
  <div
    class="container"
  >
    <h1
      class="typography ellipsis h1 prefix"
      title="PREFIX"
    >
      PREFIX
    </h1>
    <div
      class="hiddenTitle"
    >
      TITLE
    </div>
    <input
      autocomplete="off"
      class="title"
      placeholder="PLACEHOLDED"
      style=""
      tabindex="0"
      title="TITLE"
      type="text"
      value="TITLE"
    />
    <div>
      TOOLTIP
    </div>
    <h1
      class="typography h1 entity"
    >
      - 
    </h1>
    <h1
      class="typography ellipsis h1 entity"
      title="ENTITYID"
    >
      ENTITYID
    </h1>
    <h1
      class="typography ellipsis h1 suffix"
      title="SUFFIX"
    >
      SUFFIX
    </h1>
  </div>
</div>
`;

exports[`Title Component Title renders and blurs on enter 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="hiddenTitle"
    >
      ABCDE
    </div>
    <input
      autocomplete="off"
      class="title"
      data-testid="DATA-TEST-ID"
      style=""
      tabindex="0"
      title="ABCDE"
      type="text"
      value="ABCDE"
    />
    <div>
      Rename
    </div>
  </div>
</div>
`;

exports[`Title Component Title renders and blurs on tab 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="hiddenTitle"
    >
      ABCDE
    </div>
    <input
      autocomplete="off"
      class="title"
      data-testid="DATA-TEST-ID"
      style=""
      tabindex="0"
      title="ABCDE"
      type="text"
      value="ABCDE"
    />
    <div>
      Rename
    </div>
  </div>
</div>
`;

exports[`Title Component Title renders and handles changes 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="hiddenTitle"
    >
      ABCDE
    </div>
    <input
      autocomplete="off"
      class="title"
      data-testid="DATA-TEST-ID"
      style=""
      tabindex="0"
      title="ABCDE"
      type="text"
      value="ABCDE"
    />
    <div>
      Rename
    </div>
  </div>
</div>
`;

exports[`Title Component Title renders not editable 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="hiddenTitle"
    >
      TITLE
    </div>
    <input
      autocomplete="off"
      class="title"
      data-testid="DATA-TEST-ID"
      readonly=""
      style=""
      tabindex="-1"
      title="TITLE"
      type="text"
      value="TITLE"
    />
  </div>
</div>
`;

exports[`Title Component Title renders restores title when too short 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="hiddenTitle"
    >
      TITLE
    </div>
    <input
      autocomplete="off"
      class="title"
      data-testid="DATA-TEST-ID"
      style=""
      tabindex="0"
      title="TITLE"
      type="text"
      value="TITLE"
    />
    <div>
      Rename
    </div>
  </div>
</div>
`;
